# rt97l-tool

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: protocol.md
rt97l/: __init__.py  __main__.py  app.py  config.py  constants.py  data_model.py  file_io.py  memory_map.py  protocol.py  serial_port.py
rt97l/screens/: channel_edit.py  channel_table.py  com_port.py  global_settings.py
tests/: test_config.py  test_constants.py  test_data_model.py  test_file_io.py  test_memory_map.py  test_protocol.py
tools/: serial_capture.py
